IN PROGRESS - issue SOAPUI-2369: Update Apache HttpClient to 4.1 version https://jira.eviware.com/browse/SOAPUI-2369